syntax = "proto3";

package zax.v1;

import "zax/v1/artifacts.proto";

message PingRequest {}

message PingResponse {}

message IngestManifestRequest {
  ArtifactManifest manifest = 1;
}

message IngestManifestResponse {}

message GetDeltaSummaryRequest {
  string workspace_id = 1;
}

message GetDeltaSummaryResponse {
  int32 new_findings = 1;
  int32 fixed_findings = 2;
  int32 new_test_failures = 3;
  int32 fixed_test_failures = 4;
}

service WorkspaceService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc IngestManifest(IngestManifestRequest) returns (IngestManifestResponse);
  rpc GetDeltaSummary(GetDeltaSummaryRequest) returns (GetDeltaSummaryResponse);
}
